force-app/main/default/objects/Student_Letter__c.object
<CustomObject>
    <description>Student Letters Price List</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of Student Letter</description>
        <label>Description</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Student Letter Price</description>
        <label>Price</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Student Letter Type</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Hard Copy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Student Letter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Description__c</columns>
        <columns>Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SL{00000}</displayFormat>
        <label>Student Letter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Letters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>